added search bar products pagination

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,9 @@ body {
 }
 
 @layer base {
+  img {
+    display: initial;
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -77,4 +80,3 @@ body {
     @apply bg-background text-foreground;
   }
 }
-
