--- a/app/globals.css
+++ b/app/globals.css
@@ -79,4 +79,50 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  div::-webkit-scrollbar {
+    width: 4px; /* Width of the scrollbar */
+    height: 4px; /* Height for horizontal scrollbars */
+  }
+
+  /* Scrollbar track */
+  div::-webkit-scrollbar-track {
+    background: #f0f0f0; /* Track color */
+    border-radius: 8px; /* Rounded corners for the track */
+  }
+
+  /* Scrollbar thumb (the draggable part) */
+  div::-webkit-scrollbar-thumb {
+    background-color: #888; /* Color of the thumb */
+    border-radius: 8px; /* Rounded corners */
+    border: 1px solid #f0f0f0; /* Adds a border around the thumb for a more polished look */
+  }
+
+  /* Hover effect for the scrollbar thumb */
+  div::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker color on hover */
+  }
+
+  body::-webkit-scrollbar {
+    width: 4px; /* Width of the scrollbar */
+    height: 4px; /* Height for horizontal scrollbars */
+  }
+
+  /* Scrollbar track */
+  body::-webkit-scrollbar-track {
+    background: #f0f0f0; /* Track color */
+    border-radius: 8px; /* Rounded corners for the track */
+  }
+
+  /* Scrollbar thumb (the draggable part) */
+  body::-webkit-scrollbar-thumb {
+    background-color: #888; /* Color of the thumb */
+    border-radius: 8px; /* Rounded corners */
+    border: 1px solid #f0f0f0; /* Adds a border around the thumb for a more polished look */
+  }
+
+  /* Hover effect for the scrollbar thumb */
+  body::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker color on hover */
+  }
 }
